--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/breakfasts
-spring.datasource.username=gleicianegaldino
-spring.datasource.password=$Gleiciane123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://dpg-cm6cup21hbls73aoa90g-a.oregon-postgres.render.com/unidac
+spring.datasource.username=unidac_user
+spring.datasource.password=whV1rxJFMfoyqrwonRC65JaAox0hPfyn
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.mvc.hiddenmethod.filter.enabled=false
